<resources>
    <string name="app_name">TaskFlow</string>
    <string name="selected_item_in_topbar">select</string>
    <string name="add">+</string>
    <string name="NewTask">New Task</string>
    <string name="EnterTaskHere">Enter Task Here</string>
    <string name="whatIsToBeDone">What is to be done?</string>
    <string name="your_label_text">Your Label Text</string>
    <string name="due_date">Due date</string>
    <string name="date_not_set">Date not set</string>
    <string name="addtoList">Add to List</string>
    <string name="newList">New List</string>
    <string name="enterListName">Enter List Name</string>
    <string name="Add">ADD</string>
    <string name="Cancelbtn">Cancel</string>
    <string name="TaskList">Task Lists</string>
    <string name="AddInBatchMode">Add In Batch Mode</string>
    <string name="removesAds">Remove Ads</string>
    <string name="moreApps">More Apps</string>
    <string name="sendFeedback">Send Feedback</string>
    <string name="followUS">Follow US</string>
    <string name="inviteFriendToTheApp">Invite  friends To THe App</string>
    <string name="settings">Settings</string>
    <string name="tasks">Tasks :</string>
</resources>